# my-snes

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
macros/: Cargo.toml
macros/src/: lib.rs
media/: Cargo.toml
media/src/: audio.rs  lib.rs  render.rs
misc/: Makefile  spec.txt
misc/geninstr/: dune-project
misc/geninstr/lib/: dune  lib.ml  lib.mli  patch.ml  patch.mli
misc/geninstr/test/: dune
misc/spc700/: Cargo.toml  run.sh  spc700.awk  spc700.txt
misc/spc700/src/: main.rs
src/: apu.rs  cpu.rs  debug.rs  emulator.rs  joypad.rs  lib.rs  main.rs  memory.rs  opcode.rs  ppu.rs  rom.rs
src/apu/: decode.rs  dsp.rs  memory.rs  spc700.rs
src/ppu/: mmio.rs  sprite.rs  tile.rs  windows.rs
