[package]
name = "my-snes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11.2"
once_cell = "1.17.0"
strum = "0.24.1"
strum_macros = "0.24.3"
log = "0.4.17"
env_logger = "0.10.0"
macros = { path = "macros" }
media = { path = "media" }
regex = "1.8.1"
lazy_static = "1.4.0"

[dependencies.sdl2]
versoin = "0.35.2"
default-features = false
features = ["gfx"]
